--- a/content/appy-launches-new-thematic-solutions.mdx
+++ b/content/appy-launches-new-thematic-solutions.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Appy launches new thematic solutions'
-publishedAt: '2020-11-02'
-image: '/images/hero-bg.jpg'
-summary: 'Curious about how your favorite product was created? Hear from the team about how it was built, and how continued improvements are made.'
-author: 'Micheal Osman'
-authorImg: '/images/news-author-01.jpg'
+title: "Blendify launches new thematic solutions"
+publishedAt: "2020-11-02"
+image: "/images/hero-bg.jpg"
+summary: "Curious about how your favorite product was created? Hear from the team about how it was built, and how continued improvements are made."
+author: "Micheal Osman"
+authorImg: "/images/news-author-01.jpg"
 ---
 
 **There’s nothing more damaging to aspiring entrepreneurs than mere inaction**. I can attest to this myself as I spent the entirety of my mid-twenties talking about starting a business, but I never did.
