--- a/content/how-to-create-a-profile-page-using-appy.mdx
+++ b/content/how-to-create-a-profile-page-using-appy.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'How to create a profile page using Appy'
-publishedAt: '2020-10-22'
-image: '/images/news-01.jpg'
-summary: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
-author: 'Lisa Allison'
-authorImg: '/images/news-author-03.jpg'
+title: "How to create a profile page using Blendify"
+publishedAt: "2020-10-22"
+image: "/images/news-01.jpg"
+summary: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+author: "Lisa Allison"
+authorImg: "/images/news-author-03.jpg"
 ---
 
 **There’s nothing more damaging to aspiring entrepreneurs than mere inaction**. I can attest to this myself as I spent the entirety of my mid-twenties talking about starting a business, but I never did.
@@ -55,4 +55,4 @@ Lorem dolor sed viverra ipsum nunc aliquet bibendum enim eu augue ut lectus arcu
 
 ### 4. Final Thoughts
 
-Sem nulla pharetra diam sit massa eget egestas purus viverra ut tortor pretium viverra suspendisse potenti justo eget magna fermentum, iaculis eu non diam phasellus nisl suscipit adipiscing bibendum est, dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida. Integer feugiat scelerisque 
+Sem nulla pharetra diam sit massa eget egestas purus viverra ut tortor pretium viverra suspendisse potenti justo eget magna fermentum, iaculis eu non diam phasellus nisl suscipit adipiscing bibendum est, dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida. Integer feugiat scelerisque
